--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -36,12 +37,6 @@ body {
 
 .main-container {
   view-transition-name: main-container;
-}
-
-.main-header-text {
-  view-transition-name: main-header-text;
-  contain: paint;
-  width: fit-content;
 }
 
 .banner-img {
@@ -94,4 +89,15 @@ body {
 ::view-transition-new(main-container) {
   animation: 210ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
   300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
+}
+
+::view-transition-image-pair(root) {
+  isolation: auto;
+}
+
+::view-transition-old(root),
+::view-transition-new(root) {
+  mix-blend-mode: normal;
+  display: block;
+  animation-duration: 0.6s;
 }
